# welaser-robot

./: .gitignore  Dockerfile  launcher.sh  startupScript.sh  startupScript_test.sh
.github/workflows/: build.yml
catkin_ws/src/snm_test_github/: LICENSE  README.md  commands.txt
catkin_ws/src/snm_test_github/carob_fieldnav/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/snm_test_github/carob_fieldnav/launch/: carob_fieldnav.launch
catkin_ws/src/snm_test_github/carob_fieldnav/msg/: RobotSensors.msg  RobotStatus.msg  WeedingSystemStatus.msg
catkin_ws/src/snm_test_github/carob_fieldnav/src/: carob_field_nav.py
catkin_ws/src/snm_test_github/carob_sim/: README.md
catkin_ws/src/snm_test_github/carob_sim/carob_description/: CMakeLists.txt  carob_1.rviz  package.xml
catkin_ws/src/snm_test_github/carob_sim/carob_description/urdf/: carob_proto1.gazebo  carob_proto1.xacro
catkin_ws/src/snm_test_github/carob_sim/carob_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/snm_test_github/carob_sim/carob_gazebo/launch/: carob.launch  carob_description.launch
catkin_ws/src/snm_test_github/carob_sim/carob_gazebo/world_files/: README.md  create_field.py
catkin_ws/src/snm_test_github/carob_sim/carob_gazebo/worlds/: empty.world  empty_field.world  heightmap.world  maize_field.world  maize_field_2.world  maize_field_3.world  (+7 more)
catkin_ws/src/snm_test_github/firos/config/: config.json  robotdescriptions.json  robots.json  whitelist.json
catkin_ws/src/snm_test_github/firos/launch/: firos.launch
catkin_ws/src/snm_test_github/firos/scripts/: core.py
(+10 files in other folders)
